--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="ok">Ok</string>
     <string name="valorTitulo">Insira um valor</string>
     <string name="valorErro">Erro, por favor insira um valor valido</string>
+    <string name="btn_saibaMais">Saiba Mais</string>
 
     <string name="explicacao_aritimetica">A média Aritimetica serve para achar um valor médio entre todos da lista, ela é calculada somando todos os valores e depois dividindo pela quantidade deles.</string>
     <string name="explicacao_harmonica">A média Ponderada serve para adicionar pesos aos valores, assim eles fazem maior diferença na média final, serve para calcular notas de diferentes pesos por exemplo.</string>
