--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,7 +18,9 @@
     <string name="valorErro">Error, ingresa un valor válido</string>
     <string name="btn_saibaMais">Más información</string>
 
-    <string name="explicacao_aritimetica">La media aritmética se utiliza para encontrar un valor promedio entre todos los de la lista, se calcula sumando todos los valores y luego dividiendo por su número.</string>
-    <string name="explicacao_harmonica">El promedio ponderado se usa para agregar pesos a los valores, para que hagan una mayor diferencia en el promedio final, se usa para calcular puntajes de diferentes pesos, por ejemplo.</string>
-    <string name="explicacao_ponderada">"En un conjunto de valores, para calcular la media armónica, dividimos el número de elementos por la suma de la inversa de cada uno de los elementos del conjunto."</string>
+    <string name="explicacao_aritimetica">La media aritmética se usa para encontrar el valor promedio de una lista. Simplemente suma los valores y divide por la cantidad de ellos.</string>
+
+    <string name="explicacao_harmonica">El promedio ponderado agrega pesos a los valores, haciéndolos tener un mayor impacto en el promedio final. Se usa para calcular puntuaciones con diferentes pesos.</string>
+
+    <string name="explicacao_ponderada">La media armónica, dividimos la cantidad de elementos por la suma de los inversos de cada valor.</string>
 </resources>
