--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
     <string name="valorErro">Erro, por favor insira um valor valido</string>
     <string name="btn_saibaMais">Saiba Mais</string>
 
-    <string name="explicacao_aritimetica">A média Aritimetica serve para achar um valor médio entre todos da lista, ela é calculada somando todos os valores e depois dividindo pela quantidade deles.</string>
-    <string name="explicacao_harmonica">A média Ponderada serve para adicionar pesos aos valores, assim eles fazem maior diferença na média final, serve para calcular notas de diferentes pesos por exemplo.</string>
-    <string name="explicacao_ponderada">"Em um conjunto de valores, para calcular a média harmônica, dividimos a quantidade de elementos pela soma do inverso de cada um dos elementos do conjunto."</string>
+    <string name="explicacao_aritimetica">A média aritmética é usada para encontrar o valor médio de uma lista. Basta somar os valores e dividir pela quantidade deles.</string>
+
+    <string name="explicacao_harmonica">A média ponderada é usada para dar mais peso a certos valores, fazendo com que eles influenciem mais no resultado final, como no cálculo de notas com pesos diferentes.</string>
+
+    <string name="explicacao_ponderada">A média harmônica, dividimos a quantidade de elementos pela soma dos inversos de cada valor.</string>
 </resources>
